--- a/bootstrap/templates/k8s/apps/network/external-dns/ks.yaml.j2
+++ b/bootstrap/templates/k8s/apps/network/external-dns/ks.yaml.j2
@@ -13,7 +13,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: homelab
   wait: true
   interval: 30m
   timeout: 5m
