fix: use hostNetwork: true to avoid resolving alpine package errors

--- a/.taskfiles/bootstrap/resources/templates/rook-disk-job.yaml.j2
+++ b/.taskfiles/bootstrap/resources/templates/rook-disk-job.yaml.j2
@@ -11,6 +11,7 @@ spec:
       automountServiceAccountToken: false
       restartPolicy: Never
       nodeName: {{ ENV.NODE }}
+      hostNetwork: true
       containers:
         - name: main
           image: docker.io/library/alpine:latest
