feat: yoink new taskfiles

--- a/.taskfiles/volsync/resources/replicationdestination.yaml.j2
+++ b/.taskfiles/volsync/resources/replicationdestination.yaml.j2
@@ -2,7 +2,7 @@
 apiVersion: volsync.backube/v1alpha1
 kind: ReplicationDestination
 metadata:
-  name: {{ ENV.JOB }}
+  name: {{ ENV.APP }}-manual
   namespace: {{ ENV.NS }}
 spec:
   trigger:
