--- a/.taskfiles/volsync/resources/unlock.yaml.j2
+++ b/.taskfiles/volsync/resources/unlock.yaml.j2
@@ -31,5 +31,5 @@ spec:
       volumes:
         - name: repository
           nfs:
-            server: expanse.internal
-            path: /eros/Volsync
+            server: nas.internal
+            path: /mnt/world/backups
