fix: keep openebs default mount path

--- a/k8s/talos/192.168.68.11.sops.yaml.j2
+++ b/k8s/talos/192.168.68.11.sops.yaml.j2
@@ -17,6 +17,13 @@ machine:
     extraConfig:
       maxPods: 2000
     extraMounts:
+      - destination: /var/openebs/local
+        type: bind
+        source: /var/mnt/extra
+        options:
+          - bind
+          - rshared
+          - rw
       - destination: /var/mnt/extra
         type: bind
         source: /var/mnt/extra
