--- a/k8s/bootstrap/apps/network.yaml.j2
+++ b/k8s/bootstrap/apps/network.yaml.j2
@@ -6,12 +6,12 @@ metadata:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: "${SECRET_HOME_DOMAIN//./-}-tls"
+  name: "goyangi-cloud-tls"
   namespace: network
   annotations:
-    cert-manager.io/alt-names: "*.${SECRET_HOME_DOMAIN},${SECRET_HOME_DOMAIN},*.${SECRET_DEV_DOMAIN},${SECRET_DEV_DOMAIN}"
-    cert-manager.io/certificate-name: "${SECRET_HOME_DOMAIN//./-}"
-    cert-manager.io/common-name: "${SECRET_HOME_DOMAIN}"
+    cert-manager.io/alt-names: '*.goyangi.cloud,goyangi.cloud,*.solanyn.dev,solanyn.dev'
+    cert-manager.io/certificate-name: goyangi-cloud
+    cert-manager.io/common-name: goyangi.cloud
     cert-manager.io/ip-sans: ""
     cert-manager.io/issuer-group: ""
     cert-manager.io/issuer-kind: ClusterIssuer
