refactor: fully yoink structure

--- a/kubernetes/talos/192.168.1.11.sops.yaml.j2
+++ b/kubernetes/talos/192.168.1.11.sops.yaml.j2
@@ -138,7 +138,7 @@ cluster:
   secret: ENC[AES256_GCM,data:1hChDRND5DAhv5r+KGVKKIZnod+7Nra5ysfDgoDlqsYLF3gmENCDcBNr1rA=,iv:Vx+zA3fYDljFAslbbzKnna0/VVsgYISNK56HOohfjDc=,tag:QaRLu3c0iFMiXj+U5Eiv8Q==,type:str]
   controlPlane:
     endpoint: https://192.168.1.200:6443
-  clusterName: homelab
+  clustername: flux-system
   network:
     cni:
       name: none
