revert: cluster secrets and cluster settings component

--- a/kubernetes/bootstrap/apps/templates/resources.yaml.j2
+++ b/kubernetes/bootstrap/apps/templates/resources.yaml.j2
@@ -15,6 +15,19 @@ stringData:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: flux-system
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: sops-age
+  namespace: flux-system
+stringData:
+  age.agekey: {{ ENV.FLUX_SOPS_PRIVATE_KEY | indent(4) }}
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: network
 ---
 apiVersion: v1
