--- a/talos/controlplane.yaml.j2
+++ b/talos/controlplane.yaml.j2
@@ -101,6 +101,7 @@ machine:
       # Intel GPU
       - SUBSYSTEM=="drm", KERNEL=="renderD*", GROUP="44", MODE="0660"
   nodeLabels:
+    intel.feature.node.kubernetes.io/gpu: "true"
     topology.kubernetes.io/region: main
     topology.kubernetes.io/zone: m
 cluster:
