--- a/talos/controlplane.yaml.j2
+++ b/talos/controlplane.yaml.j2
@@ -14,6 +14,7 @@ machine:
     image: ghcr.io/siderolabs/kubelet:{{ ENV.KUBERNETES_VERSION }}
     extraConfig:
       maxPods: 2000
+      serializeImagePulls: false
     extraMounts:
       - destination: /var/mnt/extra
         type: bind
