--- a/talos/nodes/192.168.1.10.yaml.j2
+++ b/talos/nodes/192.168.1.10.yaml.j2
@@ -1,5 +1,13 @@
 machine:
   network:
     hostname: k8s-0
+    interfaces:
+      - deviceSelector:
+          hardwareAddr: 6c:2b:59:df:10:cb
+          driver: e1000e
+        mtu: 9000
+        dhcp: true
+        vip:
+          ip: 192.168.1.120
   install:
     image: factory.talos.dev/installer/039535a70c3bd1667c355eca78571267704e55c8a24785033d183b8f26e39d82:{{ ENV.TALOS_VERSION }}
