feat: new cluster

--- a/talos/nodes/192.168.1.11.yaml.j2
+++ b/talos/nodes/192.168.1.11.yaml.j2
@@ -3,7 +3,7 @@ machine:
     hostname: k8s-1
     interfaces:
       - deviceSelector:
-          hardwareAddr: ""
+          hardwareAddr: 6c:2b:59:cc:52:83
           driver: e1000e
         mtu: 9000
         dhcp: true
