--- a/talos/controlplane.yaml.j2
+++ b/talos/controlplane.yaml.j2
@@ -30,9 +30,7 @@ machine:
     disableManifestsDirectory: true
   install:
     diskSelector:
-      # TODO: change after disks arrive
-      model: TS256GSSD370
-      # model: SAMSUNG MZVLQ256HAJD-000H1
+      model: SAMSUNG MZVLQ256HAJD-000H1
     extraKernelArgs:
       - apparmor=0
       - init_on_alloc=0
