--- a/talos/nodes/192.168.1.12.yaml.j2
+++ b/talos/nodes/192.168.1.12.yaml.j2
@@ -3,7 +3,7 @@ machine:
     hostname: k8s-2
     interfaces:
       - deviceSelector:
-          hardwareAddr: ""
+          hardwareAddr: b8:85:84:a2:5d:97
           driver: e1000e
         mtu: 9000
         dhcp: true
