fix: update privileged k8s namespaces

--- a/talos/controlplane.yaml.j2
+++ b/talos/controlplane.yaml.j2
@@ -78,7 +78,7 @@ machine:
         - os:admin
       allowedKubernetesNamespaces:
         - actions-runner-system
-        - kube-system
+        - system-upgrade
     apidCheckExtKeyUsage: true
     diskQuotaSupport: true
     kubePrism:
